--- a/package.json
+++ b/package.json
@@ -9,9 +9,6 @@
     "preview": "astro preview"
   },
   "devDependencies": {
-    "@astrojs/react": "^0.1.3",
-    "astro": "^1.0.0-beta.47",
-    "react": "^17.0.2 || ^18.0.0",
-    "react-dom": "^17.0.2 || ^18.0.0"
+    "astro": "^1.0.0-beta.47"
   }
 }
