--- a/package.json
+++ b/package.json
@@ -6,9 +6,20 @@
     "dev": "astro dev",
     "start": "astro dev",
     "build": "astro build",
-    "preview": "astro preview"
+    "preview": "astro preview",
+    "format": "yarn prettier -w src",
+    "prepare": "husky install"
   },
   "devDependencies": {
-    "astro": "^1.0.0-beta.47"
+    "@typescript-eslint/eslint-plugin": "^5.28.0",
+    "@typescript-eslint/parser": "^5.28.0",
+    "astro": "^1.0.0-beta.47",
+    "eslint": "^7.32.0 || ^8.2.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.25.2",
+    "husky": "^8.0.0",
+    "prettier": "^2.7.1",
+    "prettier-plugin-astro": "^0.1.0-next.5",
+    "pretty-quick": "^3.1.3"
   }
 }
