--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {
     "astro": "^1.0.0-beta.47",
+    "astro-icon": "^0.7.1",
     "prettier": "^2.7.1",
     "prettier-plugin-astro": "^0.1.0-next.5"
   }
