--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "prettier": "^2.7.1",
     "prettier-plugin-astro": "^0.1.1",
     "pretty-quick": "^3.1.3"
+  },
+  "dependencies": {
+    "@astrojs/sitemap": "^0.2.4"
   }
 }
