--- a/package.json
+++ b/package.json
@@ -11,14 +11,12 @@
     "prepare": "husky install"
   },
   "devDependencies": {
-    "astro": "^1.8.0",
+    "astro": "^2.0.9",
     "astro-icon": "^0.8.0",
     "husky": "^8.0.2",
     "prettier": "^2.8.1",
     "prettier-plugin-astro": "^0.7.0",
-    "pretty-quick": "^3.1.3"
-  },
-  "dependencies": {
+    "pretty-quick": "^3.1.3",
     "@astrojs/sitemap": "^1.0.0"
   }
 }
