--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
     "prepare": "husky install"
   },
   "devDependencies": {
+    "@astrojs/sitemap": "^2.0.1",
     "astro": "^2.9.6",
     "astro-icon": "^0.8.1",
     "husky": "^8.0.2",
     "prettier": "^3.0.0",
     "prettier-plugin-astro": "^0.11.0",
-    "pretty-quick": "^3.1.3",
-    "@astrojs/sitemap": "^2.0.1"
+    "pretty-quick": "^3.1.3"
   }
 }
