--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "prettier": "^3.0.0",
     "prettier-plugin-astro": "^0.11.0",
     "pretty-quick": "^3.1.3"
+  },
+  "dependencies": {
+    "flamethrower-router": "^0.0.0-meme.12"
   }
 }
