--- a/package.json
+++ b/package.json
@@ -11,15 +11,15 @@
     "prepare": "husky install"
   },
   "devDependencies": {
-    "@astrojs/sitemap": "^2.0.1",
-    "astro": "^2.9.6",
-    "astro-icon": "^0.8.1",
-    "husky": "^8.0.2",
+    "@astrojs/sitemap": "^3.1.5",
+    "@iconify-json/bi": "^1.1.23",
+    "@iconify-json/file-icons": "^1.1.8",
+    "@iconify-json/simple-icons": "^1.1.103",
+    "astro": "^4.9.2",
+    "astro-icon": "^1.1.0",
+    "husky": "^9.0.11",
     "prettier": "^3.0.0",
-    "prettier-plugin-astro": "^0.11.0",
-    "pretty-quick": "^3.1.3"
-  },
-  "dependencies": {
-    "flamethrower-router": "^0.0.0-meme.12"
+    "prettier-plugin-astro": "^0.14.0",
+    "pretty-quick": "^4.0.0"
   }
 }
