--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
     "prettier": "^3.0.0",
     "prettier-plugin-astro": "^0.14.0",
     "pretty-quick": "^4.0.0"
+  },
+  "dependencies": {
+    "@astrojs/tailwind": "^5.1.0",
+    "tailwindcss": "^3.4.3"
   }
 }
