--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # build output
 dist/
-.output/
+# generated types
 .astro/
 
 # dependencies
@@ -20,4 +20,8 @@ pnpm-debug.log*
 # macOS-specific files
 .DS_Store
 
-.vscode
+# jetbrains setting folder
+.idea/
+
+# vscode setting folder
+.vscode/
